--- a/part4/blog/package.json
+++ b/part4/blog/package.json
@@ -21,14 +21,19 @@
     "supertest": "^6.1.6"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^6.0.11"
+    "mongoose": "^6.0.11",
+    "mongoose-unique-validator": "^2.0.1"
   },
   "jest": {
-      "testEnvironment": "node"
+    "testEnvironment": "node",
+    "testTimeout": 30000
   }
 }
