--- a/part6/redux-anecdotes/package.json
+++ b/part6/redux-anecdotes/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "eslint": "^8.1.0",
-    "eslint-plugin-react": "^7.26.1"
+    "eslint-plugin-react": "^7.26.1",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
