--- a/part8/startql/package.json
+++ b/part8/startql/package.json
@@ -12,7 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.5.0",
+    "dotenv": "^10.0.0",
     "graphql": "^16.0.1",
+    "json-web-token": "^3.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.12",
+    "mongoose-unique-validator": "^3.0.0",
     "nodemon": "^2.0.14",
     "uuid": "^8.3.2"
   },
