--- a/part8/startql/package.json
+++ b/part8/startql/package.json
@@ -11,9 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^3.5.0",
+    "apollo-server": "2.25.2",
     "dotenv": "^10.0.0",
     "graphql": "^16.0.1",
+    "graphql-subscriptions": "^2.0.0",
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
